--- a/PayKids/presentation/src/main/res/layout/activity_sign.xml
+++ b/PayKids/presentation/src/main/res/layout/activity_sign.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
 
-    <TextView
+    <FrameLayout
+        android:id="@+id/fl_sign"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="@null"
-        android:textSize="36sp"
-        android:src="@color/gray"
-        android:text="Sign In" />
+        android:background="@color/transparent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
