[PAY-004] kakao login 설정 (#5)
* setting: kakao SDK implementation

* setting: 구글, 카카오 로그인 버튼 이미지 추가

* fix: SignIn 화면 수정

* feat: home화면 추가

* feat: LoggerUtil, UiState 추가

* setting: DI 설정

* feat: Kakao Login 설정

* refactor: LoggerUtil 수정

* fix: SignInUseCase 수정

* feat: KakaoAuthUseCase 추가

* style: remove unused import

--- a/PayKids/presentation/src/main/res/layout/activity_sign.xml
+++ b/PayKids/presentation/src/main/res/layout/activity_sign.xml
@@ -4,12 +4,10 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-    <TextView
+    <FrameLayout
+        android:id="@+id/fl_sign"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="@null"
-        android:textSize="36sp"
-        android:src="@color/gray"
-        android:text="Sign In" />
+        android:background="@color/transparent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
