--- a/PayKids/presentation/src/main/res/layout/fragment_home.xml
+++ b/PayKids/presentation/src/main/res/layout/fragment_home.xml
@@ -9,14 +9,29 @@
         android:id="@+id/btn_logout"
         android:layout_width="240dp"
         android:layout_height="48dp"
+        android:layout_marginBottom="100dp"
+        android:background="@color/gray"
         android:contentDescription="@null"
         android:gravity="center"
         android:text="로그아웃"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_withdrawal"
+        android:layout_width="240dp"
+        android:layout_height="48dp"
+        android:background="@color/gray"
+        android:contentDescription="@null"
+        android:gravity="center"
+        android:text="회원 탈퇴"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/btn_logout" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
