[PAY-006] 안드로이드 12 스플래시 화면 대응  (#7)
* feat: splash 임시 이미지 파일 업로드

* feat: splash 라이브러리로 교체

* fix: 기존 스플래시 화면 삭제

* refactor: kakaoSdk init 위치 변경

* style: 주석 제거

* refactor: usecase 변경

* style: remove unused import

* refactor: splash 지속시간 1.5초로 변경

* refactor: Result 실패처리 응답 변경

* refactor: kakaoSdk 초기화 실패시 에러 출력

* refactor: dark mode Material3테마로 변경

* feat: activity exported=false 추가

--- a/PayKids/app/src/main/res/values/themes.xml
+++ b/PayKids/app/src/main/res/values/themes.xml
@@ -1,9 +1,16 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.PayKids" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.PayKids" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
     <style name="Theme.PayKids" parent="Base.Theme.PayKids" />
+
+    <style name="Theme.Start" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/paykids_logo</item>
+        <item name="windowSplashScreenAnimationDuration">1500</item>
+        <item name="postSplashScreenTheme">@style/Theme.PayKids</item>
+    </style>
 </resources>
