--- a/PayKids/presentation/src/main/res/drawable/shape_radius_5_with_stroke.xml
+++ b/PayKids/presentation/src/main/res/drawable/shape_radius_5_with_stroke.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="12dp"/>
-    <solid android:color="@color/gray3"/>
+    <corners android:radius="5dp" />
+    <stroke
+        android:width="0.5dp"
+        android:color="#A4A4A4" />
 </shape>
