refactor: 로그인 후 닉네임 설정 화면으로 이동

--- a/PayKids/presentation/src/main/res/layout/activity_start.xml
+++ b/PayKids/presentation/src/main/res/layout/activity_start.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:contentDescription="@null"
         android:textSize="36sp"
-        android:src="@color/gray"
+        android:src="@color/gray1"
         android:text="Splash" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
