--- a/PayKids/presentation/src/main/res/layout/fragment_home.xml
+++ b/PayKids/presentation/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
         android:layout_width="240dp"
         android:layout_height="48dp"
         android:layout_marginBottom="100dp"
-        android:background="@color/gray"
+        android:background="@color/blue2"
         android:contentDescription="@null"
         android:gravity="center"
         android:text="로그아웃"
@@ -23,7 +23,7 @@
         android:id="@+id/btn_withdrawal"
         android:layout_width="240dp"
         android:layout_height="48dp"
-        android:background="@color/gray"
+        android:background="@color/blue2"
         android:contentDescription="@null"
         android:gravity="center"
         android:text="회원 탈퇴"
