--- a/PayKids/presentation/src/main/res/values/colors.xml
+++ b/PayKids/presentation/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="blue2">#3AA6FF</color>
     <color name="blue3">#52CEFF</color>
 
-    <color name="red">#52CEFF</color>
+    <color name="red">#FF0000</color>
 
     <color name="gray1">#696B6E</color>
     <color name="gray2">#B2B4B6</color>
