[PAY-007] 폰트, 색상 적용 (#8)
* style: font 추가

* style: color 추가

* style: font_style, strings 추가

* style: radius_shape 추가

* style: EditText 밑줄 색 변경 추가

* style: logo black, white 버전 추가

* style: splash 그라데이션 추가

* feat: User정보 responseDTO 추가

* feat: 닉네임 설정 화면 추가

* refactor: 로그인 후 닉네임 설정 화면으로 이동

* style: remove unused import

* fix: CustomToast 코드 수정

* refactor: 화면 이동 오류 catch

* refactor: EditText 필터링 로직 수정, 버튼 비활성화 수정

* style: delete 중복 메소드

--- a/PayKids/presentation/src/main/res/values/colors.xml
+++ b/PayKids/presentation/src/main/res/values/colors.xml
@@ -2,7 +2,17 @@
 <resources>
     <color name="transparent">#00000000</color>
 
+    <color name="blue1">#237FFF</color>
+    <color name="blue2">#3AA6FF</color>
+    <color name="blue3">#52CEFF</color>
+
+    <color name="red">#FF0000</color>
+
+    <color name="gray1">#696B6E</color>
+    <color name="gray2">#B2B4B6</color>
+    <color name="gray3">#D6DADB</color>
+    <color name="gray4">#EFF1F2</color>
+
+    <color name="black">#191919</color>
     <color name="white">#FFFFFF</color>
-    <color name="black">#000000</color>
-    <color name="gray">#EBEBEB</color>
 </resources>
