--- a/PayKids/presentation/src/main/res/layout/fragment_sign_provider.xml
+++ b/PayKids/presentation/src/main/res/layout/fragment_sign_provider.xml
@@ -6,32 +6,66 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/blue1"
     android:fitsSystemWindows="true">
 
     <ImageView
-        android:layout_width="144dp"
-        android:layout_height="144dp"
+        android:layout_width="160dp"
+        android:layout_height="120dp"
         android:layout_marginTop="160dp"
-        android:background="@color/gray"
+        android:src="@drawable/paykids_logo_white"
+        android:foregroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
 
-    <ImageButton
-        android:id="@+id/btn_kakao"
-        android:layout_width="240dp"
-        android:layout_height="60dp"
+    <TextView
+        style="@style/text_bold_14px"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:fontFamily="@font/nanumsquare_bold"
+        android:text="@string/text_kakao_login"
+        android:textColor="@color/white"
 
-        android:layout_marginBottom="100dp"
-        android:background="#00000000"
-        android:scaleType="centerInside"
-        android:src="@drawable/img_kakao_login"
+        app:layout_constraintBottom_toTopOf="@id/btn_kakao"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_kakao"
+        style="@style/button_bold_16px"
+        android:layout_width="0dp"
+
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="160dp"
+        android:background="@drawable/shape_radius_5_with_stroke"
+        android:backgroundTint="#FAE100"
+
+        android:paddingStart="4dp"
+        android:text="@string/text_kakao_login_btn"
+        android:textColor="@color/black"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/iv_kakao"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+
+        android:layout_marginStart="16dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_logo_provider_kakao"
+        android:translationZ="10dp"
+
+        app:layout_constraintBottom_toBottomOf="@id/btn_kakao"
+        app:layout_constraintStart_toStartOf="@id/btn_kakao"
+
+        app:layout_constraintTop_toTopOf="@id/btn_kakao"
         tools:ignore="ContentDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
