--- a/PayKids/presentation/src/main/res/layout/fragment_home.xml
+++ b/PayKids/presentation/src/main/res/layout/fragment_home.xml
@@ -5,33 +5,32 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_logout"
-        android:layout_width="240dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="100dp"
-        android:background="@color/blue2"
-        android:contentDescription="@null"
-        android:gravity="center"
-        android:text="로그아웃"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    <ImageView
+        android:id="@+id/iv_title"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_margin="20dp"
+        android:background="@color/gray3"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_withdrawal"
-        android:layout_width="240dp"
-        android:layout_height="48dp"
-        android:background="@color/blue2"
-        android:contentDescription="@null"
-        android:gravity="center"
-        android:text="회원 탈퇴"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+    <ImageView
+        android:id="@+id/iv_stage"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="60dp"
+        android:background="@drawable/selector_stage"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_logout" />
+        app:layout_constraintTop_toBottomOf="@id/iv_title" />
 
+    <ImageView
+        android:id="@+id/iv_stage2"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="60dp"
+        android:background="@drawable/selector_stage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_stage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
