--- a/PayKids/presentation/src/main/res/values/dimens.xml
+++ b/PayKids/presentation/src/main/res/values/dimens.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="sign_button_height">54dp</dimen>
-    <dimen name="quiz_button_height">50dp</dimen>
+    <dimen name="button_height">54dp</dimen>
     <dimen name="edittext_height">48dp</dimen>
 </resources>
