--- a/PayKids/presentation/src/main/res/layout/fragment_mypage.xml
+++ b/PayKids/presentation/src/main/res/layout/fragment_mypage.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
@@ -12,7 +13,7 @@
         android:layout_marginTop="60dp"
         android:fontFamily="@font/nanumsquare_bold"
         android:includeFontPadding="false"
-        android:text="마이페이지"
+        android:text="@string/text_my_page"
         android:textSize="32sp"
 
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,6 +27,7 @@
         android:layout_marginTop="40dp"
         android:background="@drawable/shape_round_gray3"
 
+        android:contentDescription="@string/content_description_profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_mypage" />
@@ -37,12 +39,12 @@
         android:layout_marginTop="32dp"
         android:fontFamily="@font/nanumsquare_bold"
         android:includeFontPadding="false"
-        android:text="nickname"
         android:textSize="24sp"
-
         app:layout_constraintEnd_toEndOf="parent"
+
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_profile" />
+        app:layout_constraintTop_toBottomOf="@id/iv_profile"
+        tools:text="nickname" />
 
     <View
         android:id="@+id/view_my_info"
@@ -57,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="내 정보"
+        android:text="@string/text_my_info"
         android:textSize="16sp"
 
         app:layout_constraintBottom_toBottomOf="@id/view_my_info"
@@ -77,7 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="약관 및 정책"
+        android:text="@string/text_policy"
         android:textSize="16sp"
 
         app:layout_constraintBottom_toBottomOf="@id/view_policy"
@@ -97,7 +99,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="앱 버전"
+        android:text="@string/text_app_version"
         android:textSize="16sp"
 
         app:layout_constraintBottom_toBottomOf="@id/view_app_version"
@@ -117,7 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="로그아웃"
+        android:text="@string/text_logout"
         android:textColor="@color/red"
         android:textSize="16sp"
 
