refactor: 로그인 버튼 높이 수정

--- a/PayKids/presentation/src/main/res/layout/fragment_sign_nickname.xml
+++ b/PayKids/presentation/src/main/res/layout/fragment_sign_nickname.xml
@@ -81,7 +81,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_done"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/sign_button_height"
+        android:layout_height="@dimen/button_height"
 
         android:layout_marginBottom="40dp"
         android:background="@drawable/shape_radius_60_with_stroke"
