refactor: 기타 코드 수정

--- a/PayKids/presentation/src/main/res/layout/fragment_home.xml
+++ b/PayKids/presentation/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,8 @@
         <ImageView
             android:id="@+id/iv_title"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_percent="0.1"
             android:layout_margin="20dp"
             android:background="@color/gray3"
             app:layout_constraintTop_toTopOf="parent"
