--- a/PayKids/presentation/src/main/res/layout/fragment_sign_provider.xml
+++ b/PayKids/presentation/src/main/res/layout/fragment_sign_provider.xml
@@ -6,19 +6,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue1"
+    android:background="@drawable/bg_login"
     android:fitsSystemWindows="true">
-
-    <ImageView
-        android:layout_width="160dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="160dp"
-        android:src="@drawable/paykids_logo_white"
-        android:foregroundTint="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription" />
 
     <TextView
         style="@style/text_bold_12px"
@@ -39,7 +28,7 @@
         android:layout_width="320dp"
 
         android:layout_height="50dp"
-        android:layout_marginBottom="160dp"
+        android:layout_marginBottom="120dp"
         android:background="@drawable/shape_radius_5_with_stroke"
         android:backgroundTint="#FAE100"
 
