--- a/PayKids/presentation/src/main/res/layout/fragment_sign_nickname.xml
+++ b/PayKids/presentation/src/main/res/layout/fragment_sign_nickname.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray5"
     android:padding="20dp">
 
     <TextView
@@ -14,7 +15,7 @@
         android:fontFamily="@font/nanumsquare_extra_bold"
         android:text="@string/text_set_nickname"
         android:textColor="@color/black"
-        android:textSize="24sp"
+        android:textSize="28sp"
 
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/et_nick"
