--- a/PayKids/presentation/src/main/res/drawable/border_radius_top.xml
+++ b/PayKids/presentation/src/main/res/drawable/border_radius_top.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/white" />
-    <stroke
-        android:width="2dp"
-        android:color="@android:color/black" />
-    <corners android:radius="4dp" />
+    <stroke android:color="@color/white" />
+    <corners
+        android:topLeftRadius="12dp"
+        android:topRightRadius="12dp" />
 </shape>
