refactor: myPage 페이지 수정

--- a/PayKids/presentation/src/main/res/values/colors.xml
+++ b/PayKids/presentation/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="gray3">#D6DADB</color>
     <color name="gray4">#EFF1F2</color>
     <color name="gray5">#F1F8FF</color>
+    <color name="gray7">#9ABFF4</color>
     <color name="gray8">#7796BA</color>
 
     <color name="black">#191919</color>
