style: home 화면 수정

--- a/PayKids/presentation/src/main/res/layout/fragment_home.xml
+++ b/PayKids/presentation/src/main/res/layout/fragment_home.xml
@@ -14,9 +14,9 @@
         <ImageView
             android:id="@+id/iv_title"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.1"
-            android:layout_margin="20dp"
+            android:layout_height="80dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="24dp"
             android:background="@color/gray3"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="ContentDescription" />
