style: bottomNav 색깔 수정

--- a/PayKids/presentation/src/main/res/layout/activity_home.xml
+++ b/PayKids/presentation/src/main/res/layout/activity_home.xml
@@ -21,14 +21,15 @@
         android:id="@+id/nav_bottom"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:background="@color/gray3"
+        android:background="#FFFFFF"
+
         app:itemActiveIndicatorStyle="@android:color/transparent"
         app:itemBackground="@android:color/transparent"
-        app:itemIconTint="@drawable/selector_bottom_nav"
-        app:itemTextColor="@drawable/selector_bottom_nav"
+        app:itemIconTint="@color/bottom_nav_color"
+        app:itemTextColor="@color/bottom_nav_color"
+
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
-
         app:menu="@menu/bottom_navigation_items" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
