--- a/PayKids/presentation/src/main/res/layout/fragment_mypage.xml
+++ b/PayKids/presentation/src/main/res/layout/fragment_mypage.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray5">
@@ -9,7 +8,7 @@
     <TextView
         android:id="@+id/tv_mypage"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/header_height"
         android:background="@color/white"
         android:fontFamily="@font/nanumsquare_extra_bold"
         android:gravity="center"
@@ -17,7 +16,7 @@
 
         android:text="@string/text_my_page"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_size_header"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
