--- a/PayKids/presentation/src/main/res/values/dimens.xml
+++ b/PayKids/presentation/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="button_height">54dp</dimen>
     <dimen name="edittext_height">48dp</dimen>
+    
+    <dimen name="header_height">60dp</dimen>
+    <dimen name="text_size_header">20sp</dimen>
 </resources>
