--- a/PayKids/presentation/src/main/res/layout/activity_home.xml
+++ b/PayKids/presentation/src/main/res/layout/activity_home.xml
@@ -21,7 +21,7 @@
         android:id="@+id/nav_bottom"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:background="#FFFFFF"
+        android:background="@color/white"
 
         app:itemActiveIndicatorStyle="@android:color/transparent"
         app:itemBackground="@android:color/transparent"
