--- a/PayKids/presentation/src/main/res/values/colors.xml
+++ b/PayKids/presentation/src/main/res/values/colors.xml
@@ -12,7 +12,14 @@
     <color name="gray2">#B2B4B6</color>
     <color name="gray3">#D6DADB</color>
     <color name="gray4">#EFF1F2</color>
+    <color name="gray5">#F1F8FF</color>
+    <color name="gray6">#C1DEFB</color>
+    <color name="gray7">#9ABFF4</color>
+    <color name="gray8">#7796BA</color>
 
     <color name="black">#191919</color>
     <color name="white">#FFFFFF</color>
+
+    <color name="bottom_nav_selected">@color/blue1</color>
+    <color name="bottom_nav_unselected">@color/gray6</color>
 </resources>
